@@ -9,15 +9,14 @@
 		<dawdler.build.version>0.0.2-RELEASES</dawdler.build.version>
 		<project.version>0.0.1-SNAPSHOT</project.version>
 	</properties>
-	
 	<dependencyManagement>
-	<dependencies>
-	<dependency>
-			<groupId>dawdler-train</groupId>
-			<artifactId>user-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
+		<dependencies>
+			<dependency>
+				<groupId>dawdler-train</groupId>
+				<artifactId>user-api</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+		</dependencies>
 	</dependencyManagement>
 	<modules>
 		<module>api</module>
@@ -30,40 +29,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.2</version>
 				<configuration>
-					<encoding>${project.build.sourceEncoding}</encoding>
-					<source>17</source>
-					<target>17</target>
-					<!--debug>true</debug>-->
-					<compilerArgs>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.misc=dawdler.core</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.perf=dawdler.server</arg>
-						<arg>--add-exports</arg>
-						<arg>java.base/jdk.internal.loader=dawdler.client.plug</arg>
-					</compilerArgs>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>3.2.1</version>
-			</plugin>
-			<plugin>
-				<!-- -N versions:update-child-modules -->
-				<!--mvn versions:set -DnewVersion=0.0.3-RELEASES-->
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>versions-maven-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<generateBackupPoms>false</generateBackupPoms>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
-		<defaultGoal>compile</defaultGoal>
 	</build>
 </project>
